Set release version to 2.0.1